--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 rvm:
-- 2.3
+  - 2.3
 
 before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
+  - chmod +x ./script/cibuild # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
@@ -17,10 +17,8 @@ script: ./script/cibuild
 
 env:
   global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
 
-exclude: 
-  [vendor]
+exclude: [vendor]
 
-sudo: false # route your build to the container-based infrastructure for a
-faster build
+sudo: false # route your build to the container-based infrastructure for a faster build
