--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ rvm:
   - 2.2
 
 before_script:
-  - chmod +x ./script/cibuild # or do this locally and commit
+  - chmod +x ./.script/cibuild # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./script/cibuild
+script: ./.script/cibuild
 
 # branch whitelist, only for GitHub Pages
 #branches:
