--- a/_config.yml
+++ b/_config.yml
@@ -25,4 +25,4 @@ kramdown:
 gems:
   - jekyll-sitemap
 
-exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile"]
+exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "vendor"]
