--- a/_data/mentors.yml
+++ b/_data/mentors.yml
@@ -21,3 +21,9 @@
   id: "suzukum"
   photo: "/images/suzukum.jpg"
   profile: "多趣味というか飽きっぽいです。あまり役立つことは発言しないです。ガジェットと猫が大好きです。昔はTVゲームが大好きでしたが、そもそもTVゲームではなくシステム、UI、ハードが好きだということに気が付きました。"
+
+- name: "岩切 晃子"
+  kana: "いわきり あきこ"
+  id: "@kohsei"
+  photo: "/images/iwakiri.jpg"
+  profile: "翔泳社勤務。岩手県釜石市出身東京在住。釜石を出てから、ずっと旅をしているような気がしてます。東京内の引越し歴8回。仲間とモノを作り上げていくのが好き。音楽が好き。お酒が好き。旅が好き。"
