--- a/_data/mentors.yml
+++ b/_data/mentors.yml
@@ -33,3 +33,9 @@
   id: "@harashunta"
   photo: "/images/hara.png"
   profile: "日系SIer勤務。西荻生まれ西荻育ち。文系でしたがエンジニアをしています、5年目29歳になりました。仕事では主にAWS・Azureといったインフラを担当しています。スポーツが好きです。Less is More."
+
+- name: "加藤 由花"
+  kana: "かとう ゆか"
+  id: 
+  photo: "/images/kato.png"
+  profile: "東京女子大学教授。数理科学科の教員です。専門は情報ネットワークで、最近は主に、ネットワークを利用したロボットサービスの研究に取り組んでいます。女子大教員として、女性研究者・技術者支援のあり方について考える毎日です。"
