--- a/_data/mentors.yml
+++ b/_data/mentors.yml
@@ -37,5 +37,5 @@
 - name: "加藤 由花"
   kana: "かとう ゆか"
   id: 
-  photo: "/images/kato.png"
+  photo: "/images/kato.jpg"
   profile: "東京女子大学教授。数理科学科の教員です。専門は情報ネットワークで、最近は主に、ネットワークを利用したロボットサービスの研究に取り組んでいます。女子大教員として、女性研究者・技術者支援のあり方について考える毎日です。"
