--- a/_data/mentors.yml
+++ b/_data/mentors.yml
@@ -17,7 +17,7 @@
   profile: "アジャイルコーチ、認定スクラムマスター。訳書に『アジャイルな見積りと計画づくり』（マイナビ）、『Fearless Change』（丸善出版）など。好きなプラクティスはテスト駆動開発とふりかえり。"
 
 - name: "Maiko Suzuki"
-  kana: "ずずき まいこ"
+  kana: "すずき まいこ"
   id: "suzukum"
   photo: "/images/suzukum.jpg"
   profile: "多趣味というか飽きっぽいです。あまり役立つことは発言しないです。ガジェットと猫が大好きです。昔はTVゲームが大好きでしたが、そもそもTVゲームではなくシステム、UI、ハードが好きだということに気が付きました。"
