--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -15,6 +15,10 @@
   a: |
     小学生は必ず保護者の方が送迎してください。最後の30分で発表を行いますので、発表開始までに戻ってこれるようでしたら、保護者の方の途中退出も可能です。
 
-- q: Scratchって何ですか？
+- q: "Scratchって何ですか？"
   a: |
     「<a href="https://scratch.mit.edu/about">Scratchについて</a>」をご覧ください。
+
+- q: "MacとWindowsはどちらがいいですか？ iPadでもいいですか？"
+  a: |
+    何を使っても構いませんが、やりたいことが制限される可能性はあります。やりたいことが決まっていれば、事前にご相談ください。本格的にプログラミングをやってみたいのであれば、キーボードのついたコンピュータを使ったほうがいいでしょう。
