--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -4,7 +4,7 @@
 
 - q: "参加費は？ 参加費以外にお金はかかりますか？"
   a: |
-    参加費は無料です。参加費以外にお金はかかりません。会場までの交通費はご負担ください。
+    参加費は無料です。それ以外にお金がかかることもありません。ただし、会場までの交通費はご負担ください。
 
 - q: "パソコンのレンタルはありますか？"
   a: |
