--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -22,3 +22,7 @@
 - q: "MacとWindowsはどちらがいいですか？ iPadでもいいですか？"
   a: |
     何を使っても構いませんが、やりたいことが制限される可能性はあります。やりたいことが決まっていれば、事前にご相談ください。本格的にプログラミングをやってみたいのであれば、キーボードのついたコンピュータを使ったほうがいいでしょう。
+
+- q: "Scratchでジャンプしたいです。"
+  a: |
+    <a href="https://wiki.scratch.mit.edu/wiki/Jumping">ジャンプのページ（英語）</a>が参考になるでしょう。
