--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: ruby
 rvm:
   - 2.2
 
-before_script:
-  - chmod +x ./.script/cibuild # or do this locally and commit
+#before_script:
+#  - chmod +x ./.script/cibuild # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
