--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -26,3 +26,15 @@
 - q: "Scratchでジャンプしたいです。"
   a: |
     <a href="https://wiki.scratch.mit.edu/wiki/Jumping">ジャンプのページ（英語）</a>が参考になるでしょう。
+
+- q: "◯◯の端末でも大丈夫ですか？"
+  a: |
+    初心者には<a href="https://code.org/">Code.org</a>を推奨しています。事前に動作をご確認ください。
+
+- q: "小学校入学前でも参加できますか？"
+  a: |
+    参加をお断りするわけではありませんが、CoderDojoの対象は「小学生から高校生」です。特別なサポートは用意できませんので、あらかじめご了承ください。
+
+- q: "1人1台の端末を用意できません。2人で共有しても構いませんか？"
+  a: |
+    必ず「1人1台」の端末をご用意ください。
