--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: ruby
 rvm:
-  - 2.2
+  - 2.3
 
 #before_script:
 #  - chmod +x ./.script/cibuild # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./.script/cibuild
+#script: ./.script/cibuild
 
 # branch whitelist, only for GitHub Pages
 #branches:
@@ -17,6 +17,6 @@ script: ./.script/cibuild
 
 env:
   global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+#    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
 
 sudo: false # route your build to the container-based infrastructure for a faster build
