--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -38,3 +38,8 @@
 - q: "1人1台の端末を用意できません。2人で共有しても構いませんか？"
   a: |
     必ず「1人1台」の端末をご用意ください。
+
+- q: "親もプログラミングしてもいいですか？"
+  a: |
+    もちろんです。メンターも活用してください。
+
