--- a/_data/mentors.yml
+++ b/_data/mentors.yml
@@ -30,7 +30,7 @@
   kana: "はら しゅんたろう"
   id: "@harashunta"
   photo: "/images/hara.png"
-  profile: "日系SIer勤務。西荻生まれ西荻育ち。文系でしたがエンジニアをしています、5年目29歳になりました。仕事では主にAWS・Azureといったインフラを担当しています。スポーツが好きです。Less is More."
+  profile: "西荻生まれ西荻育ち。文系でしたがエンジニアをしています、5年目29歳になりました。仕事では主にAWS・Azureといったインフラを担当しています。スポーツが好きです。Less is More."
 
 - name: "加藤 由花"
   kana: "かとう ゆか"
