--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@
 # Site settings
 title: CoderDojoすぎなみ
 email: info@coderdojo-suginami.doorkeeper.jp
-description: > # this means to ignore newlines until "baseurl:"
+description:
+  杉並区で開催している小中高生のための無料のプログラミング道場
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://coderdojo-suginami.github.io" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
