--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: CoderDojoすぎなみ
 email: info@coderdojo-suginami.doorkeeper.jp
 description:
-  杉並区で開催している小中高生のための無料のプログラミング道場
+  杉並区にある子どもたちのためのプログラミング倶楽部です。参加費は無料。プログラミング教室ではなく「自主学習」を支援します。
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://coderdojo-suginami.github.io" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
