--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ markdown: kramdown
 kramdown:
   input: GFM
 
-gems:
+plugins:
   - jekyll-sitemap
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "vendor"]
