--- a/_data/mentors.yml
+++ b/_data/mentors.yml
@@ -2,6 +2,18 @@
 # 画像ファイルはimagesに入れるか、GravatarのURLを使用してください。
 # できれば 113px に指定してもらいたいので、Gravatorを使ったほうが楽です。
 #
+- name: "角 征典"
+  kana: "かど まさのり"
+  id: "@kdmsnr"
+  photo: "https://s.gravatar.com/avatar/3b69e2bb0466e097ffa37fa0be33e274?s=113"
+  profile: "ワイクル株式会社（取締役）。東京工業大学環境・社会理工学院（特任講師）。アジャイル開発、リーンスタートアップ、デザイン思考を用いた開発組織の支援に従事。大学では、アントレプレナー教育に従事。リーンスタートアップ、アジャイル開発、組織変革、チームビルディング、プログラミングに関する翻訳書を数多く手がけている。"
+
+- name: "永瀬美穂"
+  kana: "ながせ みほ"
+  id: "@miholovesq"
+  photo: "https://s.gravatar.com/avatar/eef3d64b550f8f823d128785e0de8d6f?s=113"
+  profile: "アジャイルコンサルタント。産業技術大学院大学特任准教授。受託開発の現場でWebアプリケーションエンジニア、プロジェクトマネージャーとしての経験を重ね、2009年頃より所属組織でのアジャイルの導入と実践を通じ組織マネジメントを行う。現在は顧客へのアジャイル導入支援、教育研修、コーチングをしながら、大学院大学で教鞭を執っている。"
+
 - name: "新井 剛"
   kana: "あらい たけし"
   id: "@araratakeshi"
@@ -37,3 +49,10 @@
   id: 
   photo: "/images/kato.jpg"
   profile: "東京女子大学教授。数理科学科の教員です。専門は情報ネットワークで、最近は主に、ネットワークを利用したロボットサービスの研究に取り組んでいます。女子大教員として、女性研究者・技術者支援のあり方について考える毎日です。"
+
+- name: "いとうせいご"
+  kana: "いとうせいご"
+  id:
+  photo: "https://via.placeholder.com/113x113"
+  profile: "株式会社ヴァル研究所"
+
