--- a/_data/mentors.yml
+++ b/_data/mentors.yml
@@ -6,7 +6,7 @@
   kana: "かど まさのり"
   id: "@kdmsnr"
   photo: "https://s.gravatar.com/avatar/3b69e2bb0466e097ffa37fa0be33e274?s=113"
-  profile: "ワイクル株式会社（取締役）。東京工業大学環境・社会理工学院（特任講師）。アジャイル開発、リーンスタートアップ、デザイン思考を用いた開発組織の支援に従事。大学では、アントレプレナー教育に従事。リーンスタートアップ、アジャイル開発、組織変革、チームビルディング、プログラミングに関する翻訳書を数多く手がけている。"
+  profile: "ワイクル株式会社（代表取締役）。東京工業大学環境・社会理工学院（特任講師）。アジャイル開発、リーンスタートアップ、デザイン思考を用いた開発組織の支援に従事。大学では、アントレプレナー教育に従事。プログラミングに関する翻訳書を数多く手がけている。"
 
 - name: "永瀬美穂"
   kana: "ながせ みほ"
